[gd_scene load_steps=10 format=3 uid="uid://dw54gipr37u3k"]

[ext_resource type="Script" path="res://Scripts/Objects/CropObject.gd" id="1_jc5bo"]
[ext_resource type="Resource" uid="uid://bvewjdaxh43s8" path="res://Resoures/Items/Plants/Crops/AsteroidPomeCrop.tres" id="2_vlfts"]
[ext_resource type="Texture2D" uid="uid://dkh84hmd86jvf" path="res://Assets/Objects/Plant-Stages.png" id="3_obntn"]
[ext_resource type="PackedScene" uid="uid://bls6ftfun40dh" path="res://Scenes/Components/GrowableComponent.tscn" id="3_y4ku1"]
[ext_resource type="PackedScene" uid="uid://cjyp74klcqibc" path="res://Scenes/Components/InteractableComponent.tscn" id="4_jisy6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yqmw3"]
atlas = ExtResource("3_obntn")
region = Rect2(0, 208, 64, 16)

[sub_resource type="Animation" id="Animation_ietnj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:type:textures")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("AtlasTexture_yqmw3")]
}

[sub_resource type="Animation" id="Animation_glmqc"]
resource_name = "stage_0"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:type:textures")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("AtlasTexture_yqmw3")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aujll"]
_data = {
"RESET": SubResource("Animation_ietnj"),
"stage_0": SubResource("Animation_glmqc")
}

[node name="FourStageCropObject" type="Node2D"]
script = ExtResource("1_jc5bo")
type = ExtResource("2_vlfts")

[node name="GrowableComponent" parent="." instance=ExtResource("3_y4ku1")]

[node name="InteractableComponent" parent="." instance=ExtResource("4_jisy6")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_aujll")
}

[node name="OneHSprite" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -6)
texture = ExtResource("3_obntn")
hframes = 5
vframes = 15
frame = 22

[node name="TwoHSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_obntn")

[connection signal="stage_advanced" from="GrowableComponent" to="." method="_on_growable_component_stage_advanced"]
[connection signal="interacted" from="InteractableComponent" to="." method="_on_interactable_component_interacted"]
